Revert "fix: The cross button should be right aligned inside the input box (#2370)"
This reverts commit 2cd03e0609829aad24f5ae4680e1d5ec6dbf3eda.

--- a/src/app/fyle/my-expenses/my-expenses.page.scss
+++ b/src/app/fyle/my-expenses/my-expenses.page.scss
@@ -117,6 +117,7 @@
     mat-form-field {
       ::ng-deep .mat-mdc-text-field-wrapper {
         padding-left: 6px;
+        padding-right: 6px;
       }
 
       ::ng-deep .mat-icon {
@@ -142,6 +143,7 @@
     }
 
     &-close {
+      margin: -10px;
       font-size: 18px;
     }
   }
